# restaurant-monolith

./: .env  .gitignore  .gitmodules  README.md  Taskfile.yml  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
@client/: package.json
@client/src/app/: layout.tsx
@client/src/requests/: OrderStatusSubscription.tsx  types.ts
@server/: .gitmodules  README.md  index.ts  package-lock.json  package.json
@server/src/: schema.gql  server.ts
@server/src/database/: database.module.ts  postgres.ts  postgresCrudRepository.ts  redis.ts  redisCrudRepository.ts
@server/src/order/: order.module.ts
@server/src/recipe/: recipe.module.ts  recipe.resolver.ts
@server/src/reservation/: reservation.resolver.ts
@server/src/user/: router.ts
django/: pyproject.toml
django/order/domain/: entities.py
django/product/domain/: entities.py
django/seedworks/domain/: entity.py
django/setup/: settings.py
nestjs/: package.json  tsconfig.json
nestjs/coverage/: clover.xml  coverage-final.json  lcov.info
nestjs/coverage/lcov-report/: index.html
nestjs/src/: schema.gql
nestjs/src/order/: order.module.ts
nestjs/src/recipe/: recipe.resolver.spec.ts
nestjs/src/reservation/: reservation.module.ts  reservation.resolver.spec.ts
nestjs/test/: jest-e2e.json
src/: app.module.ts  schema.gql
src/order/: order.module.ts  order.repository.ts  order.resolver.spec.ts  order.resolver.ts
src/order/dto/: index.ts  (+1 more)
src/recipe/: recipe.resolver.ts  recipe.service.ts
src/reservation/: reservation.resolver.ts  reservation.service.ts
test/: jest-e2e.json
(+196 files in other folders)
