[tool.poetry]
name = "restaurant-monolith-django"
version = "0.1.0"
description = ""
authors = ["Gustavo Valle"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
black = "^22.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
